# binja-standalone-api

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  llil_parser.cpp  main.cpp  standalone_test.cpp
src/: binaryninjacore.cpp  core_analysis.cpp  core_architecture.cpp  core_callingconvention.cpp  core_callingconvention.h  core_function.cpp  core_impl.h  core_llil.cpp  core_llil.h  core_platform.cpp  core_plugins.cpp  core_ref.h  core_settings.cpp  core_settings.h  core_string.cpp  core_string.h  core_types.cpp  core_types.h  core_utils.h
